jira issues resolved

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -20,10 +20,10 @@ html, body {
     width: 100%;
     font-family: 'Open Sans';
 }
-// html{
-//     padding-right: 0 !important;
-//     overflow: hidden !important;
-// }
+html{
+    padding-right: 0 !important;
+    overflow: initial !important;
+}
 body{
     font-size: 18px;
     font-family: 'Open Sans' !important;
