removed scroll bar

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3571,6 +3571,7 @@ input:-internal-autofill-selected {
 .block-fix{
     .table-responsive{
         min-height: 500px;
+        height: auto;
     }
 }
 .fix-ele {
