added faq page sidebar

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -30,6 +30,8 @@ $red:#ff3030;
 $black-lite:#1c2333;
 $lt-blk:#282828;
 $lt-black:#adaaaa;
+$orange-drk:#e9680d;
+$lt-orange:#fde2cd;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
