--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3850,6 +3850,9 @@ display: none !important;
     }
 }
 /** outer sidebar style end **/
+.er-txt {
+    margin-top: -14px;
+}
 .icn-wrap{
     position: relative;
 }
