--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3897,3 +3897,15 @@ display: none !important;
     bottom: auto;
     cursor: pointer;
 }
+.wal-btn {
+    background: #0c2941;
+    padding: 8px 8px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -o-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -moz-border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1rem;
+}
