--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -4052,3 +4052,14 @@ input:-internal-autofill-selected {
 //         }
 //     }
 // }
+
+
+.status-sep-popup{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.status-sep-popup p {
+  font-weight: normal;
+  font-size: 25px;
+}
