--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3955,6 +3955,39 @@ input:-internal-autofill-selected {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+}
+.loading-steps {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+  margin: 0 auto;
+}
+.loading-steps > div {
+  width: 45px;
+  background: #666;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+  position: relative;
+}
+.loading-steps > div::after {
+  content: '';
+    position: absolute;
+    width: 100px;
+    height: 2px;
+    left: 100%;
+    background: #fff;
+    z-index: 0;
+}
+.loading-steps > div.completed::after{
+  background-color: #F1740F;
+}
+.loading-steps > div:last-of-type::after{
+  display: none;
 }
 .scroll-cus {
   overflow: hidden;
@@ -3967,7 +4000,7 @@ input:-internal-autofill-selected {
     overflow: auto;
     width: 100%;
     z-index: 5;
-    
+
     @media #{$max-lg} {
       height: 300px;
       min-height: 100%;
@@ -3975,33 +4008,32 @@ input:-internal-autofill-selected {
     @media #{$max-md} {
       height: 250px;
     }
-    
-  }/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
+  } /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-  // margin-top: 67.5px;
-  // margin-bottom: 35px;
-  // padding-top: 30px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #F06500 0%, #F28B03 100%); 
-  border-radius: 10px;
-  margin-top: 50px !important;
-  margin-bottom: 50px !important;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+    // margin-top: 67.5px;
+    // margin-bottom: 35px;
+    // padding-top: 30px;
+  }
 
-/* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: green; 
-// }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #f06500 0%, #f28b03 100%);
+    border-radius: 10px;
+    margin-top: 50px !important;
+    margin-bottom: 50px !important;
+  }
+
+  /* Handle on hover */
+  // ::-webkit-scrollbar-thumb:hover {
+  //   background: green;
+  // }
   .table {
     th {
       position: -webkit-sticky;
