--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3956,15 +3956,18 @@ input:-internal-autofill-selected {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  height: 95%;
 }
 .loading-steps {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 95%;
+  width: 100%;
   margin: 0 auto;
+  flex-direction: column;
+  height: 100%;
 }
-.loading-steps > div {
+.loading-steps  .step_wrapper >div {
   width: 45px;
   background: #666;
   border-radius: 50px;
@@ -3972,16 +3975,42 @@ input:-internal-autofill-selected {
   align-items: center;
   justify-content: center;
   height: 45px;
+}
+.loading-steps .step_wrapper{
+  display: flex;
+  align-items: center;
   position: relative;
+  width: 50%;
+  justify-content: space-evenly;
 }
 .loading-steps > div::after {
   content: '';
     position: absolute;
-    width: 100px;
-    height: 2px;
-    left: 100%;
+    width: 2px;
+    height: 45px;
+    left: 79%;
+    top: 100%;
     background: #fff;
     z-index: 0;
+}
+.balance_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1rem;
+}
+.balance_card span {
+  font-weight: 600;
+}
+.balance_card {
+  background: #000;
+  padding: 10px;
+  border: 1px solid;
+  width: 32%;
+}
+.balance_card h4.heading-sm {
+  font-size: 14px;
+  color: #ccc;
 }
 .loading-steps > div.completed::after{
   background-color: #F1740F;
