--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2255,7 +2255,8 @@ input:checked + .slider:before {
 .stak-pop {
   &::before {
     content: "";
-    position: absolute;
+    // position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
