--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -4282,6 +4282,11 @@ input:-internal-autofill-selected {
     left: 0;
   }
 }
+@media (max-width:767.98px){
+  .hd-sel.block{
+    display: block;
+  }
+}
 @media (max-width:420px){
   .loading-steps .step_wrapper {
       width: 100%;
