--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -4305,3 +4305,10 @@ input:-internal-autofill-selected {
       width: 100%;
   }
 }
+.watch-img-sec .img-wdth {
+  max-width: 80px;
+  margin: 15px auto;
+}
+.del-pop .watch-img-sec {
+  height: auto;
+}
