--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2335,8 +2335,8 @@ input:checked + .slider:before {
       }
     }
     a:hover {
-      background: $primary;
-      color: $white;
+      // background: $primary;
+      // color: $white;
     }
     &.active .page-link {
       z-index: 3;
