--- a/public/assets/scss/pages/_home.scss
+++ b/public/assets/scss/pages/_home.scss
@@ -320,6 +320,7 @@
         .dropdown-item{
             // background-color: rgba($body-bg-800,0.8);
             background-color: $body-bg-secondry;
+            padding: 10px 20px;
             color:$white;
             // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
             &:hover{
