--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -4425,3 +4425,12 @@ input:-internal-autofill-selected {
     }
   }
 }
+.rstk-popup{
+  h5{
+    margin-bottom: 50px !important;
+  }
+  p{
+    margin-bottom: 30px !important;
+  }
+  
+}
