--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -273,3 +273,6 @@
     overflow: hidden;
     overflow-y: auto;
 }
+.fade.shib-popup.faucet-pop.unbnd-pop.modal.show {
+    padding: 0 15px !important;
+}
